# i-memory

./: .gitignore  OPTIMIZE.md  README.md  agile-logger.yaml  agile_logger.yaml  ecosystem.config.cjs  manual_trigger_build.py  pyproject.toml  requirements.txt  run.sh
assets/datasets/: train.json  validation.json
docker/: docker-compose-milvus.yml  docker-postgres.sh  docker-redis.sh
docs/: add_hsg_memory_flow.md  current-capabilities.md  hsg_retrieval_comparison.md  hsg_sector_explanation.md  i-memory-interface.md  i-memory_business_overview.md  i-memory_technical_architecture.md  i-memory_technical_solution.md  issue.md  query_hsg_memories_flow.md  synthetic_vs_sector_eval.md  waypoint_query_and_creation.md
docs/usage/: 图接口调用步骤.md
src/: imemory.py
tests/: e2e_test_delete_and_profile.py  test_batch_delete.py  test_bert.py  test_bert_manager_predict.py  test_bert_manager_train.py  test_bm25_searcher.py  test_classify_content.py  test_describe_user_profile.py  test_extract_essence.py  test_fact_extract.py  test_graph_build.py  test_graph_search.py  test_hsg_graph_expansion.py  test_hsg_helpers.py  test_imemory.py  test_imemory_add.py  test_imemory_clear.py  test_imemory_query.py  test_mem_ops.py  test_memory_graph_config.py  test_mini_lm.py  test_postgres_vector_store.py  test_scheduler_jobs_manual_trigger.py  test_sector_classify.py  test_semantic_split.py  test_session_extractor.py  test_session_ops_encrypt.py  test_simhash.py  test_user_access.py  test_user_profile.py  test_user_profile_encrypt.py  test_user_profile_merge_ops.py  test_user_repo_encrypt.py
(+185 files in other folders)
